--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -72,7 +72,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Lab9P2_DiegoRosales
-main.class=lab9p2_diegorosales.Lab9P2_DiegoRosales
+main.class=lab9p2_diegorosales.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
